# maya

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cursor/rules/: rust.mdc
crates/clear_lock/: Cargo.toml
crates/clear_lock/src/: lib.rs
crates/clear_node_modules/: Cargo.toml
crates/clear_node_modules/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compress_pictures/: Cargo.toml
crates/compress_pictures/src/: lib.rs
crates/git_add_commit_push/: Cargo.toml
crates/git_add_commit_push/src/: lib.rs
crates/gitignore_add_zip/: Cargo.toml
crates/gitignore_add_zip/src/: lib.rs
crates/maya_common/: Cargo.toml
crates/maya_common/src/: error.rs  file_utils.rs  lib.rs
crates/mp4_to_m3u8/: Cargo.toml
crates/mp4_to_m3u8/src/: lib.rs
crates/react_to_vue/: Cargo.toml
crates/react_to_vue/src/: lib.rs
crates/vite_pack_add_zip/: Cargo.toml
crates/vite_pack_add_zip/src/: lib.rs
docs/: 001、项目文件结构设计.md  002、项目优化方案.md
pkg/: README.md  maya.d.ts  maya.js  maya_bg.wasm  maya_bg.wasm.d.ts  package.json
src/: clean_ops.rs  git_ops.rs  main.rs  pack_ops.rs
src/modules/: clean_ops.rs  git_ops.rs  optimize_ops.rs  pack_ops.rs  transform_ops.rs
tests/: integration_tests.rs
