[workspace]
# 指定工作区成员的路径，这里是"./crates/*"，意味着包含crates目录下的所有包。
members  = ["crates/*"] 
# 指定使用的依赖解析器版本，这里是"2"
resolver = "2"

[package]
name = "maya"
version = "0.1.0"
edition = "2021"

[workspace.package]
# 指定Rust版本，这里是"2021"
edition    = "2021"
# 开源许可证
license    = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3



[workspace.dependencies]
clear_node_modules = { version = "0.1.0", path = "crates/clear_node_modules" }
clear_lock = { version = "0.1.0", path = "crates/clear_lock" }
maya = { version = "0.1.0", path = "src" }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clear_node_modules = { workspace = true }
clear_lock = { workspace = true }
