[workspace]
# 指定工作区成员的路径，这里是"./crates/*"，意味着包含crates目录下的所有包。
members  = ["crates/*"] 
# 指定使用的依赖解析器版本，这里是"2"
resolver = "2"

[package]
name = "maya"
version = "0.1.48"
edition = "2021"

[workspace.package]
# 指定Rust版本，这里是"2021"
edition    = "2021"
# 开源许可证
license    = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3



[workspace.dependencies]
clear_node_modules = { version = "0.1.0", path = "crates/clear_node_modules" }
clear_lock = { version = "0.1.0", path = "crates/clear_lock" }
git_add_commit_push = { version = "0.1.0", path = "crates/git_add_commit_push" }
vite_pack_add_zip = { version = "0.1.0", path = "crates/vite_pack_add_zip" }
gitignore_add_zip = { version = "0.1.0", path = "crates/gitignore_add_zip" }
maya = { version = "0.1.0", path = "src" }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clear_node_modules = { workspace = true }
clear_lock = { workspace = true }
git_add_commit_push = { workspace = true }
vite_pack_add_zip = { workspace = true }
gitignore_add_zip = { workspace = true }


