[package]
name = "react_to_vue"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.10.3"
swc_core="22.5.0"
swc_ecma_ast = "8.1.2"
swc_ecma_parser = "11.1.3"
swc_ecma_codegen = "10.0.0"
swc_common = "8.1.0"
path-clean = "1.0.1"
glob = "0.3.1"
serde_json = "1.0"